readiness-app/force-app/main/default/objects/inc_User_Token__c/inc_User_Token__c.object-meta.xml
<CustomObject>
    <description>Used to store access and refresh tokens for report API calls.</description>
    <label>inContact User Token</label>
    <nameField>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inContact User Token</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>