readiness-app/force-app/main/default/objects/inc_User_Token__c/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <description>Access token</description>
    <inlineHelpText>Access token</inlineHelpText>
    <label>access token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>