readiness-app/force-app/main/default/objects/inc_User_Token__c/fields/accessTokenTime__c.field-meta.xml
<CustomField>
    <fullName>accessTokenTime__c</fullName>
    <description>accessTokenTime</description>
    <inlineHelpText>accessTokenTime</inlineHelpText>
    <label>accessTokenTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>