readiness-app/force-app/main/default/objects/inc_User_Token__c/fields/expires_in__c.field-meta.xml
<CustomField>
    <fullName>expires_in__c</fullName>
    <description>Token Expires in</description>
    <inlineHelpText>Token Expires in</inlineHelpText>
    <label>expires_in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>