readiness-app/force-app/main/default/objects/inc_User_Token__c/fields/Is_Authentication_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_Authentication_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Authentication Successful</label>
    <type>Checkbox</type>
</CustomField>